k8s/dev-temporal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-temporal-web-ingress
  namespace: dev
  annotations:
    # If the class annotation is not specified it dev to "gce".
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: dev
  rules:
  - host: dev-temporal-web.paxel.co
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: temporal-web
            port:
              number: 8088
  tls:
  - hosts:
    - dev-temporal-web.paxel.co
    secretName: dev-tls-new
