k8s/preprod-temporal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: preprod-temporal-web-ingress
  namespace: default
  annotations:
    # If the class annotation is not specified it qas to "gce".
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: preprod
  rules:
  - host: preprod-temporal-web.paxel.co
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: preprod-temporal-web
            port:
              number: 8088
  tls:
  - hosts:
    - preprod-temporal-web.paxel.co
    secretName: preprod-tls-new
