k8s/prod-temporal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-temporal-web-ingress
  namespace: default
  annotations:
    # If the class annotation is not specified it qas to "gce".
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: prod
  rules:
  - host: prod-temporal-web.paxel.co
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: temporal-web
            port:
              number: 8088
  tls:
  - hosts:
    - prod-temporal-web.paxel.co
    secretName: prod-tls-new
