k8s/qa-temporal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-temporal-web-ingress
  namespace: default
  annotations:
    # If the class annotation is not specified it qas to "gce".
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: qa
  rules:
  - host: qa-temporal-web.paxel.co
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: qa-temporal-web
            port:
              number: 8088
  tls:
  - hosts:
    - qa-temporal-web.paxel.co
    secretName: qa-tls-new
