k8s/temporal-preprod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-web-ingress
  namespace: default
  annotations:
    # If the class annotation is not specified it qas to "gce".
    kubernetes.io/ingress.class: qa
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
  - host: preprod-temporal.paxel.co
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: temporal-web
            port:
              number: 8088
  tls:
  - hosts:
    - preprod-temporal.paxel.co
    secretName: preprod-tls-new
